# snake-game

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  GRADE.md  README.md
docs/: PROPOSAL.md  UML and Timeline.md  _config.yml  index.md
scratch/: commanArg.cpp  exceptions.cpp  time_loop.cpp
src/: CPPLINT.cfg
src/main/: Fruit.cpp  Fruit.h  Game.cpp  Game.h  GameBoard.txt  Player.cpp  Player.h  Snake.cpp  Snake.h  Type.cpp  Type.h  main.cpp  main_func.cpp  main_func.h
src/test/: FruitTest.cpp  GameTest.cpp  Leaderboard.txt  PlayerTest.cpp  SnakeTest.cpp
src/test/snake/: SnakeTest.cpp
src/test/type/: TypeTest.cpp
storage/: EasyLeaderboard.txt  HardLeaderboard.txt  MediumLeaderboard.txt  playerList.txt
storage/players/: Luke.txt  Stefan.txt  luke.txt  stefan.txt
